force-app/main/default/objects/L_PR_Organisation_Affiliation_Relation__c/L_PR_Organisation_Affiliation_Relation__c.object-meta.xml
<CustomObject>
    <description>Organisation Affiliation Relation</description>
    <label>Organisation Affiliation Relation</label>
    <nameField>
        <displayFormat>OAF-{00000}</displayFormat>
        <label>Relationship Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Organisation Affiliation Relations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>