force-app/main/default/objects/L_PR_Organisation_Affiliation_Relation__c/fields/Affiliation__c.field-meta.xml
<CustomField>
    <fullName>Affiliation__c</fullName>
    <label>Affiliation</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>You can only select La Trobe Staff Affiliation</errorMessage>
        <filterItems>
            <field>I_RM_Affiliation__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>La Trobe Staff</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>I_RM_Affiliation__c</referenceTo>
    <relationshipLabel>Organisation Affiliation Relations</relationshipLabel>
    <relationshipName>Organisation_Affiliation_Relations</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>