force-app/main/default/objects/L_PR_Organisation_Affiliation_Relation__c/fields/L_PR_Organisation__c.field-meta.xml
<CustomField>
    <fullName>L_PR_Organisation__c</fullName>
    <label>Organisation Name</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <errorMessage>You can only select Organisation type of Educational Institution or 
External Organisation</errorMessage>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Educational Institution</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>External Organisation</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Organisation Affiliation Relations</relationshipLabel>
    <relationshipName>Organisation_Affiliation_Relations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>