force-app/main/default/objects/L_PR_Organisation_Affiliation_Relation__c/fields/L_PR_Partnership_Role__c.field-meta.xml
<CustomField>
    <fullName>L_PR_Partnership_Role__c</fullName>
    <label>Partnership Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>