force-app/main/default/objects/L_PR_Organisation_Affiliation_Relation__c/fields/L_PR_RACI__c.field-meta.xml
<CustomField>
    <fullName>L_PR_RACI__c</fullName>
    <label>RACI</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Responsible</fullName>
            </value>
            <value>
                <fullName>Accountable</fullName>
            </value>
            <value>
                <fullName>Consulted</fullName>
            </value>
            <value>
                <fullName>Informed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>