force-app/main/default/objects/L_PR_Organisation_Affiliation_Relation__c/fields/L_PR_RACI_Description__c.field-meta.xml
<CustomField>
    <fullName>L_PR_RACI_Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>