force-app/main/default/objects/L_PR_Organisation_Affiliation_Relation__c/recordTypes/L_PR_RACI.recordType-meta.xml
<RecordType>
    <fullName>L_PR_RACI</fullName>
    <active>true</active>
    <label>RACI</label>
</RecordType>